--- a/fmseTest/MainWindow.xaml
+++ b/fmseTest/MainWindow.xaml
@@ -20,7 +20,7 @@
         <Border Grid.Row="0" Background="#ffffff" Padding="0,0,0,0">
             <StackPanel Orientation="Horizontal">
                 <Button x:Name="FileButton" Click="FileButton_Click" Content="File" HorizontalAlignment="Left" Width="40" Background="#00753b" Foreground="#ffffff"/>
-                <Button x:Name="AwardsButton" Click="AwardsButton_Click" Content="Awards" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="AwardsButton_MouseEnter"/>
+                <Button x:Name="AwardsButton" Click="AwardsButton_Click" Content="Awards" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="AwardsButton_MouseEnter" MouseLeave="AwardsButton_MouseLeave"/>
                 <Button x:Name="NationsButton" Click="NationsButton_Click" Content="Nations" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
                 <Button x:Name="CitiesButton" Click="CitiesButton_Click" Content="Cities" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
                 <Button x:Name="ClubsButton" Click="ClubsButton_Click" Content="Clubs" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
