--- a/fmseTest/MainWindow.xaml
+++ b/fmseTest/MainWindow.xaml
@@ -21,12 +21,12 @@
             <StackPanel Orientation="Horizontal">
                 <Button x:Name="FileButton" Click="FileButton_Click" Content="File" HorizontalAlignment="Left" Width="40" Background="#00753b" Foreground="#ffffff"/>
                 <Button x:Name="AwardsButton" Click="AwardsButton_Click" Content="Awards" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="AwardsButton_MouseEnter" MouseLeave="AwardsButton_MouseLeave"/>
-                <Button x:Name="NationsButton" Click="NationsButton_Click" Content="Nations" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
-                <Button x:Name="CitiesButton" Click="CitiesButton_Click" Content="Cities" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
-                <Button x:Name="ClubsButton" Click="ClubsButton_Click" Content="Clubs" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
-                <Button x:Name="CompetitionsButton" Click="CompetitionsButton_Click" Content="Competitions" HorizontalAlignment="Left" Width="80" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
-                <Button x:Name="PlayersButton" Click="PlayersButton_Click" Content="Players" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
-                <Button x:Name="StaffButton" Click="StaffButton_Click" Content="Staff" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0"/>
+                <Button x:Name="NationsButton" Click="NationsButton_Click" Content="Nations" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="NationsButton_MouseEnter" MouseLeave="NationsButton_MouseLeave"/>
+                <Button x:Name="CitiesButton" Click="CitiesButton_Click" Content="Cities" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="CitiesButton_MouseEnter" MouseLeave="CitiesButton_MouseLeave"/>
+                <Button x:Name="ClubsButton" Click="ClubsButton_Click" Content="Clubs" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="ClubsButton_MouseEnter" MouseLeave="ClubsButton_MouseLeave"/>
+                <Button x:Name="CompetitionsButton" Click="CompetitionsButton_Click" Content="Competitions" HorizontalAlignment="Left" Width="80" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="CompetitionsButton_MouseEnter" MouseLeave="CompetitionsButton_MouseLeave"/>
+                <Button x:Name="PlayersButton" Click="PlayersButton_Click" Content="Players" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="PlayersButton_MouseEnter" MouseLeave="PlayersButton_MouseLeave"/>
+                <Button x:Name="StaffButton" Click="StaffButton_Click" Content="Staff" HorizontalAlignment="Left" Width="60" Background="#ffffff" Foreground="#000000" BorderThickness="0,0,0,0" BorderBrush="#e0e0e0" MouseEnter="StaffButton_MouseEnter" MouseLeave="StaffButton_MouseLeave"/>
 
 
 
